test/bad/class0.pacc
/*
nopacc 5:20 'expected CCNode, "-", or "]"'
*/

Bad :: char * ← [z-a] → { "foo" }
